crates/ayame-spell/tests/snapshots/cli__github_format.snap
---
source: crates/ayame-spell/tests/cli.rs
expression: "normalized(&project, &output)"
---
status: 1
stdout:
::warning file=input.md,line=1,col=9,title=ayame-spell [typo]::`teh` should be `the`
stderr:
1 issue(s) in 1 file(s) — 1 file(s) checked
